--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div class="black-box">
 					<h2 style="color: white">
 
-						<div id="city">We're ALL EARS from New York and ALU et voila!</div>
+						<div id="city">We're ALL EARS from New York and ALU et voila update1 !</div>
 
 					</h2>
 					<p style="color: white">We’re an adoption center that focuses
